# cl-opus

./: .gitignore  README.md  README.mess  cl-opus.asd  cl-vorbis.asd  documentation.lisp  low-level.lisp  package.lisp  staple.ext.lisp  wrapper.lisp
docs/: index.html
lib/: CMakeLists.txt  README.mess
lib/ogg/: package_version
lib/ogg/cmake/: OggConfig.cmake.in
lib/opus/: package_version
lib/opus/cmake/: OpusConfig.cmake.in
lib/opusfile/: package_version
static/: libopus-mac-arm64.dylib
